lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:4: error: type mismatch;
 found   : java.util.List[lessons.lander.universe.Point]
 required: scala.collection.immutable.List[lessons.lander.universe.Point]
var Liste:List[Point] = getSol()
                              ^Lander:6: error: type mismatch;
 found   : Unit
 required: lessons.lander.universe.Segment
}
^