lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.code
def getLandingZone():Segment = {
var debut:Point = Point(0,0)
var fin:Point = Point(0,0)
var Liste:List[Point] = getSol()
	 
}
